[gd_scene load_steps=2 format=3 uid="uid://bubble_pop_main_menu"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")
game_name = "Bubble Pop"
game_scene = "res://scenes/game.tscn"
primary_color = Color("#00bcd4")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.14, 0.18, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "GAME NAME"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 28
text = "Best: 0"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="CreditsLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "Made with Godot 4.5"
horizontal_alignment = 1

[connection signal="pressed" from="VBox/PlayButton" to="." method="_on_play_pressed"]
