[gd_scene load_steps=2 format=3 uid="uid://frog_jump_menu"]

[ext_resource type="Script" path="res://scenes/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.529, 0.808, 0.922, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 60.0
offset_top = 120.0
offset_right = 660.0
offset_bottom = 220.0
theme_override_colors/font_color = Color(0.133, 0.545, 0.133, 1)
theme_override_colors/font_shadow_color = Color(0, 0.3, 0, 0.5)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 72
text = "FROG JUMP"
horizontal_alignment = 1

[node name="FrogIcon" type="Label" parent="."]
layout_mode = 1
offset_left = 310.0
offset_top = 230.0
offset_right = 410.0
offset_bottom = 340.0
pivot_offset = Vector2(50, 55)
theme_override_font_sizes/font_size = 96
text = "üê∏"
horizontal_alignment = 1

[node name="BestScoreLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 210.0
offset_top = 360.0
offset_right = 510.0
offset_bottom = 400.0
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 32
text = "BEST: 0"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 160.0
offset_top = 900.0
offset_right = 560.0
offset_bottom = 1100.0
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "üê∏ PLAY üê∏"

[node name="Instructions" type="Label" parent="."]
layout_mode = 1
offset_left = 110.0
offset_top = 1150.0
offset_right = 610.0
offset_bottom = 1250.0
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 0.8)
theme_override_font_sizes/font_size = 24
text = "Hold to charge your jump
Release to leap to the next lily pad!"
horizontal_alignment = 1
vertical_alignment = 1
